--- a/index.html
+++ b/index.html
@@ -80,14 +80,135 @@
         <section id="features">
             <div class="container">
                 <div class="row">
-                    <h3 class="section__header">Features</h3>
-                    <h2 class="section__title">We have Amazing <span class="purple">Service.</span></h2>
-                    <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque perferendis
-                        reprehenderit praesentium rem saepe sint amet, vero autem ipsum libero.
-                    </p>
+                    <div class="features__description">
+                        <h3 class="section__header">FEATURES</h3>
+                        <h2 class="section__title">We have Amazing <span class="purple">Service.</span></h2>
+                        <p class="section__para features__description--para">Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Eaque
+                            perferendis
+                            reprehenderit praesentium rem saepe sint amet.
+                        </p>
+                    </div>
                     <div class="services">
                         <div class="service">
-                            <i class="fa-solid fa-shield-check"></i>
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">Secure</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">24/7 Support</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">Customizeable</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">Reliable</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">Fast</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <div>
+                                <i class="fas fa-link service__icon"></i>
+                            </div>
+                            <div class="service__description">
+                                <h3 class="service__title">Easy</h3>
+                                <p class="service__para">We strictly deal only with vendors that provide top notch
+                                    security.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="work">
+            <div class="container">
+                <div class="row">
+                    <div class="section__wrapper">
+                        <div class="work__description">
+                            <h3 class="section__header">QUALITY WORK</h3>
+                            <h2 class="section__title">Designed & Developed by <span
+                                    class="purple">Professionals.</span></h2>
+                            <p class="section__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae
+                                itaque ea architecto, quis at sint eligendi nobis fugiat ipsa inventore qui quos
+                                exercitationem voluptate velit sapiente minima Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit.
+                            </p>
+                            <button class="btn section__btn">Learn More</button>
+                        </div>
+                        <figure class="work__img--wrapper">
+                            <img src="./assets/website.png" class="work__img" alt="">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="steps">
+            <div class="container">
+                <div class="row">
+                    <div class="section__wrapper">
+                        <figure class="steps__img--wrapper">
+                            <img src="./assets/laptop.png" alt="" class="steps__img">
+                        </figure>
+                        <div class="steps__description">
+                            <h3 class="section__header">STEPS</h3>
+                            <h2 class="section__title">Easy to <span class="purple">Get Started.</span></h2>
+                            <div class="step">
+                                <h2 class="step__number">01</h2>
+                                <div class="step__description">
+                                    <h3 class="step__title">Register</h3>
+                                    <p class="step__para">Create an account with us using Google or Facebook.</p>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <h2 class="step__number">02</h2>
+                                <div class="step__description">
+                                    <h3 class="step__title">Download</h3>
+                                    <p class="step__para">Browse and download the template that you like from the marketplace.</p>
+                                </div>
+                            </div>
+                            <div class="step">
+                                <h2 class="step__number">03</h2>
+                                <div class="step__description">
+                                    <h3 class="step__title">Run</h3>
+                                    <p class="step__para">Follow the instructions to setup and customize the template to your needs.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
